Add site-wide navigation bar

--- a/views/admin_login.ejs
+++ b/views/admin_login.ejs
@@ -4,6 +4,7 @@
   <title>Admin Login</title>
 </head>
 <body>
+  <%- include("partials/navbar") %>
   <h1>Admin Login</h1>
   <% if (typeof error !== 'undefined') { %>
     <p style="color:red"><%= error %></p>
