--- a/views/order_success.ejs
+++ b/views/order_success.ejs
@@ -4,6 +4,7 @@
   <title>Order Placed</title>
 </head>
 <body>
+  <%- include("partials/navbar") %>
   <h1>Order Placed</h1>
   <p>Your order ID is <%= order.id %>. Status: <%= order.status %></p>
   <a href="/">Continue Shopping</a>
