--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,6 +4,7 @@
   <title>Your Cart</title>
 </head>
 <body>
+  <%- include("partials/navbar") %>
   <h1>Your Cart</h1>
   <% if (cart.length === 0) { %>
     <p>Cart is empty.</p>
