--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
   <title>Baby Prints</title>
 </head>
 <body>
+  <%- include("partials/navbar") %>
   <h1>Products</h1>
   <ul>
     <% products.forEach(p => { %>
