--- a/views/product.ejs
+++ b/views/product.ejs
@@ -4,6 +4,7 @@
   <title><%= product.title %></title>
 </head>
 <body>
+  <%- include("partials/navbar") %>
   <h1><%= product.title %></h1>
   <p><%= product.description %></p>
   <p>Price: $<%= product.price %></p>
