--- a/views/admin_login.ejs
+++ b/views/admin_login.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Admin Login</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <%- include("partials/navbar") %>
