--- a/views/order_success.ejs
+++ b/views/order_success.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Order Placed</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <%- include("partials/navbar") %>
